--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,11 +20,11 @@
           <a href="index.html"><img class="header__logo" src="img/logo-mobile.svg" alt="Мишка. Магазин вещей, сделанных врукопашную!"></a>
         <button class="btn btn-burger" type="button"></button>
       </div>
-      <ul class="header__nav nav  btn-burger--none">
+      <ul class="header__nav nav btn-burger--none">
         <li><a class="nav__item" href="catalog.html">Каталог товаров</a></li>
         <li><a class="nav__item" href="form.html">Вязание на заказ</a></li>
       </ul>
-      <ul class="header__nav nav  btn-burger--none">
+      <ul class="header__nav nav btn-burger--none">
         <li><a class="nav__item" href="serch.html">Поиск по сайту</a></li>
         <li><a class="nav__item" href="cart.html">Корзина: пока пуста</a></li>
       </ul>
@@ -97,18 +97,19 @@
       </span>
     </footer>
 
-    <div class="popup">
-      <h3 class="popup__title">Добавить  в корзину</h3>
-      <p class="popup__text">Выберите размер:</p>
-      <form class="pupup__form" id="popup-form">
-        <label class="popup__label" for="popup-checkbox" aria-label="Маленький">
-        <input class="popup__checkbox visually-hidden1" id="popup-checkbox" form="popup-form" type="checkbox" name="popup-form-s" checked>S</label>
-        <label class="popup__label" for="popup-checkbox2" aria-label="Средний">M</label>
-        <input class="popup__checkbox visually-hidden1" id="popup-checkbox2" form="popup-form" type="checkbox" name="popup-for">
-        <label class="popup__label" for="popup-checkbox3" aria-label="Большой">L</label>
-        <input class="popup__checkbox visually-hidden1" id="popup-checkbox3" form="popup-form" type="checkbox" name="popup-form0">
-      </form>
-      <button class="popup__btn btn" type="submit" form="popup-form">Добавить</button>
+    <div class="popup-wrapper">
+      <div class="popup">
+        <h3 class="popup__title">Добавить  в корзину</h3>
+        <p class="popup__text">Выберите размер:</p>
+        <form class="pupup__form" id="popup-form">
+          <input class="popup__checkbox visually-hidden" id="popup-checkbox" form="popup-form" type="checkbox" name="popup-form-s" checked>
+          <label class="popup__label" for="popup-checkbox" aria-label="Маленький">S</label>
+          <input class="popup__checkbox visually-hidden" id="popup-checkbox2" form="popup-form" type="checkbox" name="popup-form-m">
+          <label class="popup__label" for="popup-checkbox2" aria-label="Средний">M</label>
+          <input class="popup__checkbox visually-hidden" id="popup-checkbox3" form="popup-form" type="checkbox" name="popup-for-l">
+          <label class="popup__label" for="popup-checkbox3" aria-label="Большой">L</label></form>
+        <button class="popup__btn btn" type="submit" form="popup-form">Добавить</button>
+      </div>
     </div>
   </body>
 </html>
