--- a/source/index.html
+++ b/source/index.html
@@ -15,6 +15,9 @@
   <body>
     <header class="header">
       <div class="logo-wrapper">
+        <picture>
+          <source srcset="#">
+        </picture>
         <img class="header__logo" src="img/logo-mobile.svg" alt="Мишка. Магазин вещей, сделанных врукопашную!">
         <button class="btn btn-burger" type="button"></button>
       </div>
@@ -131,18 +134,19 @@
       </span>
     </footer>
 
-    <div class="popup">
-      <h3 class="popup__title">Добавить  в корзину</h3>
-      <p class="popup__text">Выберите размер:</p>
-      <form class="pupup__form" id="popup-form">
-        <input class="popup__checkbox visually-hidden1" id="popup-checkbox" form="popup-form" type="checkbox" name="popup-form-s" checked>
-        <label class="popup__label" for="popup-checkbox" aria-label="Маленький">S</label>
-        <label class="popup__label" for="popup-checkbox2" aria-label="Средний">M</label>
-        <input class="popup__checkbox visually-hidden1" id="popup-checkbox2" form="popup-form" type="checkbox" name="popup-for">
-        <label class="popup__label" for="popup-checkbox3" aria-label="Большой">L</label>
-        <input class="popup__checkbox visually-hidden1" id="popup-checkbox3" form="popup-form" type="checkbox" name="popup-form0">
-      </form>
-      <button class="popup__btn btn" type="submit" form="popup-form">Добавить</button>
+    <div class="popup-wrapper">
+      <div class="popup">
+        <h3 class="popup__title">Добавить  в корзину</h3>
+        <p class="popup__text">Выберите размер:</p>
+        <form class="pupup__form" id="popup-form">
+          <input class="popup__checkbox visually-hidden" id="popup-checkbox" form="popup-form" type="checkbox" name="popup-form-s" checked>
+          <label class="popup__label" for="popup-checkbox" aria-label="Маленький">S</label>
+          <input class="popup__checkbox visually-hidden" id="popup-checkbox2" form="popup-form" type="checkbox" name="popup-form-m">
+          <label class="popup__label" for="popup-checkbox2" aria-label="Средний">M</label>
+          <input class="popup__checkbox visually-hidden" id="popup-checkbox3" form="popup-form" type="checkbox" name="popup-for-l">
+          <label class="popup__label" for="popup-checkbox3" aria-label="Большой">L</label></form>
+        <button class="popup__btn btn" type="submit" form="popup-form">Добавить</button>
+      </div>
     </div>
   </body>
 </html>
