--- a/source/index.html
+++ b/source/index.html
@@ -15,29 +15,26 @@
   <body>
     <header class="header">
       <div class="logo-wrapper">
-        <picture>
-          <source srcset="#">
-        </picture>
         <img class="header__logo" src="img/logo-mobile.svg" alt="Мишка. Магазин вещей, сделанных врукопашную!">
         <button class="btn btn-burger" type="button"></button>
       </div>
-      <ul class="header__nav nav btn-burger--none">
+      <ul class="header__nav nav header__nav--site">
         <li><a class="nav__item" href="catalog.html">Каталог товаров</a></li>
         <li><a class="nav__item" href="form.html">Вязание на заказ</a></li>
       </ul>
-      <ul class="header__nav nav btn-burger--none">
-        <li><a class="nav__item" href="serch.html">Поиск по сайту</a></li>
-        <li><a class="nav__item" href="cart.html">Корзина: пока пуста</a></li>
+      <ul class="header__nav nav header__nav--client">
+        <li><a class="nav__item nav__item--search" href="serch.html">Поиск по сайту</a></li>
+        <li><a class="nav__item nav__item--cart" href="cart.html">Корзина: пока пуста</a></li>
       </ul>
     </header>
 
     <main class="main">
       <div class="main__site-theme site-theme">
-        <ul class="site-theme__list">
+        <ul class="site-theme__list site-theme__list1">
           <li>Новые поступления</li>
           <li>Распродажа</li>
         </ul>
-        <ul class="site-theme__list">
+        <ul class="site-theme__list site-theme__list2">
           <li>Бесплатная доставка по России</li>
         </ul>
         <h1 class="site-theme__slogan">Милые штуки ручной  работы для дома</h1>
