--- a/source/index.html
+++ b/source/index.html
@@ -102,20 +102,24 @@
     <section class="contacts">
       <div class="contacts__description">
         <h3 class="contacts__title">Контакты</h3>
-        <table class="contacts__table">
-          <tr>
-            <th>e-mail:</th>
-            <td>info@mimimishkashop.ru</td>
-          </tr>
-          <tr>
-            <th>адрес:</th>
-            <td>г. Санкт-Петербург, ул. Большая Конюшенная, д 19/8 офис 101</td>
-          </tr>
-        </table>
+        <div class="contacts__table-wrapper">
+          <table class="contacts__table">
+            <tr>
+              <th>e-mail:</th>
+              <td class="contacts__table-link"><a>@mimimishkashop.ru</a></td>
+            </tr>
+          </table>
+          <table class="contacts__table">
+            <tr>
+              <th>адрес:</th>
+              <td>г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д 19/8 офис 101</td>
+            </tr>
+          </table>
+        </div>
       </div>
       <a href="#"><img src="img/map-mobile@1x.jpg" alt="map"></a>
       <div>
-        <a class="btn feedback__btn" href="write-us.html">Напишите нам</a>
+        <a class="btn contacts__btn" href="write-us.html">Напишите нам</a>
       </div>
     </section>
 
