Some changes in form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -89,7 +89,7 @@
 
       <section class="main__manufacturing manufacturing">
         <h3 class="manufacturing__title">Процесс производства</h3>
-        <video class="manufacturing__video" poster="img/video-mobile@1x.jpg" width="260" height="150"></video>
+        <img class="manufacturing__video" src="img/video-mobile@1x.jpg" width="682" height="455">
         <p class="manufacturing__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
         <a class="manufacturing__btn btn" href="cart.html">Сделать заказ</a>
       </section>
