--- a/source/index.html
+++ b/source/index.html
@@ -117,10 +117,8 @@
           </table>
         </div>
       </div>
-      <a href="#"><img src="img/map-mobile@1x.jpg" alt="map"></a>
-      <div>
-        <a class="btn contacts__btn" href="write-us.html">Напишите нам</a>
-      </div>
+      <a class="contacts__map" href="#"><img src="img/map-mobile@1x.jpg" alt="map"></a>
+      <a class="btn contacts__btn" href="write-us.html">Напишите нам</a>
     </section>
 
     <footer class="footer">
