dscnfbdftv gj ctnrt

--- a/source/index.html
+++ b/source/index.html
@@ -122,15 +122,17 @@
     </section>
 
     <footer class="footer">
-      <a class="footer__logo logo" href="#"><img src="img/logo-mobile.svg" alt="Магазин Мишка"></a>
-      <ul class="footer__social social">
-        <li><a class="social__btn social__btn--inst" target="_blank" href="https://www.instagram.com/htmlacademy/"><img src="img/icon-insta.svg" alt="instagram"></a></li>
-        <li><a class="social__btn social__btn--fb" target="_blank" href="https://www.facebook.com/htmlacademy"><img src="img/icon-fb.svg" alt="facebook"></a></li>
-        <li><a class="social__btn social__btn--twit" target="_blank" href="https://twitter.com/htmlacademy_ru"><img src="img/icon-twitter.svg" alt="twiter"></a></li>
-      </ul>
-      <span class="footer__copyright">
-        <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="img/htmlacademy.svg" alt="Заходите на HTMLAcademy.ru" width="50" height="50"></a>
-      </span>
+      <div>
+        <a class="footer__logo logo" href="#"><img src="img/logo-mobile.svg" alt="Магазин Мишка"></a>
+        <ul class="footer__social social">
+          <li><a class="social__btn social__btn--inst" target="_blank" href="https://www.instagram.com/htmlacademy/"><img src="img/icon-insta.svg" alt="instagram"></a></li>
+          <li><a class="social__btn social__btn--fb" target="_blank" href="https://www.facebook.com/htmlacademy"><img src="img/icon-fb.svg" alt="facebook"></a></li>
+          <li><a class="social__btn social__btn--twit" target="_blank" href="https://twitter.com/htmlacademy_ru"><img src="img/icon-twitter.svg" alt="twiter"></a></li>
+        </ul>
+        <span class="footer__copyright">
+          <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="img/htmlacademy.svg" alt="Заходите на HTMLAcademy.ru" width="50" height="50"></a>
+        </span>
+      </div>
     </footer>
 
     <div class="popup-wrapper">
