--- a/source/index.html
+++ b/source/index.html
@@ -16,9 +16,9 @@
     <script src="js/picturefill.js"></script>
   </head>
   <body>
-    <div style="display: none">
+    <div style="display: none;">
       <include src="build/img/sprite.svg"></include>
-      <svg xmlns="thhp://w3.org/2000/svg"></svg>
+      <svg xmlns="http://www.w3.org/2000/svg"></svg>
     </div>
     <header class="header">
       <div class="logo-wrapper">
