--- a/source/index.html
+++ b/source/index.html
@@ -212,7 +212,7 @@
         <button class="popup__btn btn" type="submit" form="popup-form">Добавить</button>
       </div>
     </div>
-    <script src="js/main.js"></script>
-    <script src="js/map.js"></script>
+    <!-- <script src="js/main.js"></script>
+    <script src="js/map.js"></script> -->
   </body>
 </html>
