--- a/source/catalog.html
+++ b/source/catalog.html
@@ -64,7 +64,12 @@
             <p class="card__characteristics">Рост 30 см, вес 200 г</p>
             <div>
               <span class="card__price">1 200 руб.</span>
-              <a href="#"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+              <a href="#">
+                <svg class="icon-cart" aria-label="Добавитьв корзину">
+                  <use xlink:href="#icon-cart">
+                  </use>
+                </svg>
+              </a>
             </div>
 
           </div>
@@ -86,7 +91,12 @@
             <p class="card__characteristics">Диаметр 15 см, высота 10 см</p>
             <div>
               <span class="card__price">690 руб.</span>
-              <a href="#"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+              <a href="#">
+                <svg class="icon-cart" aria-label="Добавитьв корзину">
+                  <use xlink:href="#icon-cart">
+                  </use>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
@@ -107,7 +117,12 @@
             <p class="card__characteristics">Диаметр 30 см, высота 30 см</p>
             <div>
               <span class="card__price">1 500 руб.</span>
-              <a href="#"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+              <a href="#">
+                <svg class="icon-cart" aria-label="Добавитьв корзину">
+                  <use xlink:href="#icon-cart">
+                  </use>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
@@ -124,7 +139,7 @@
           <img class="manufacturing__video" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="260" height="150" alt="Видосики, м-м-м...">
         </picture>
         <p class="manufacturing__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="manufacturing__btn btn" href="cart.html">Сделать заказ</a>
+        <a class="manufacturing__btn btn" href="#">Сделать заказ</a>
       </section>
     </main>
 
