--- a/source/form.html
+++ b/source/form.html
@@ -129,7 +129,6 @@
         <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="img/htmlacademy.svg" alt="Заходите на HTMLAcademy.ru" width="50" height="50"></a>
       </span>
     </footer>
+    <script src="js/main.js"></script>
   </body>
-  <script src="js/main.js">
-  </script>
 </html>
