--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <link href="fonts/opensanslight.woff2" type="font/woff2" rel="preload" as="font">
     <link href="fonts/opensans.woff2" type="font/woff2" rel="preload" as="font">
     <link href="fonts/opensansbold.woff2" type="font/woff2" rel="preload" as="font">
@@ -179,7 +179,7 @@
           </li>
           <li>
             <a class="social__btn social__btn--twit" target="_blank" href="https://twitter.com/htmlacademy_ru">
-              <svg class="icon-insta" aria-label="twitter">
+              <svg class="icon-twitter" aria-label="twitter">
                 <use xlink:href="#icon-twitter">
                 </use>
               </svg>
@@ -188,9 +188,8 @@
         </ul>
         <span class="footer__copyright">
           <a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Разработано
-            <img src="img/htmlacademy.svg" alt="Заходите на HTMLAcademy.ru" width="50" height="50">
-            <svg class="icon-htmlacademy" aria-label="htmlacademy">
-              <use xlink:href="#icon-htmlacademy">
+            <svg class="logo-htmlacademy" aria-label="Заходите на HTMLAcademy.ru" width="50" height="50">
+              <use xlink:href="#logo-htmlacademy">
               </use>
             </svg>
           </a>
