--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
 
       </div>
       <nav class="header__nav header__nav--nojs">
-        <button class="header__btn-burger btn" type="button"></button>
+        <button class="header__btn-burger" type="button"></button>
         <div class="header__nav-wrapper">
           <ul class="header__list nav header__list--site">
             <li class="header__item"><a class="header__link" href="catalog.html">Каталог товаров</a></li>
@@ -95,10 +95,10 @@
           </tr>
         </table>
         <picture>
-          <source type="image/webp" media="(min-width: 1150px)" srcset="img/index-set-desktop@1x.webp 1x, img/index-set-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="img/index-set-tablet@1x.webp 1x, img/index-set-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/index-set-mobile@1x.webp 1x, img/index-set-mobile@2x.webp 2x">
-          <source media="(min-width: 1150px)" srcset="img/index-set-desktop@1x.png 1x, img/index-set-desktop@2x.png 2x">
+          <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
+          <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@1x.jpg 2x">
           <img class=" product__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязанные корзинки разного диаметра" width="260" height="315">
         </picture>
@@ -127,8 +127,8 @@
             <a href="#">@misssssiskras</a>
           </blockquote>
           <div class="container-btn">
-            <button class="btn feedback__arrow" type="button">Туда</button>
-            <button class="btn feedback__arrow" type="button">Сюда</button>
+            <button class="btn feedback__arrow feedback__arrow--left" type="button">Туда</button>
+            <button class="btn feedback__arrow feedback__arrow--right" type="button">Сюда</button>
           </div>
           <a class="btn feedback__btn" href="#">Написать</a>
         </div>
