--- a/source/index.html
+++ b/source/index.html
@@ -74,6 +74,8 @@
         <a class="category__item category__item--02" href="#"><p>Детские  игрушки</p></a>
       </section>
 
+      <div class="main__wrapper"></div>
+
       <section class="product">
         <div class="product__name">
           <h3 class="product__denotation">Вязаные корзинки</h3>
@@ -106,6 +108,8 @@
         <a class="btn product__btn" href="#">ЗАКАЗАТЬ</a>
       </section>
 
+      <div class="main__wrapper"></div>
+
       <section class="about-us">
         <div class="features">
           <h3 class="features__title">Коротко о нас:</h3>
@@ -135,6 +139,8 @@
       </section>
     </main>
 
+    <div class="main__wrapper"></div>
+
     <section class="contacts">
       <div class="contacts__description">
         <h3 class="contacts__title">Контакты</h3>
@@ -142,7 +148,7 @@
           <table class="contacts__table">
             <tr>
               <th>e-mail:</th>
-              <td class="contacts__table-link"><a>@mimimishkashop.ru</a></td>
+              <td class="contacts__table-link"><a>info@mimimishkashop.ru</a></td>
             </tr>
           </table>
           <table class="contacts__table">
