--- a/source/form.html
+++ b/source/form.html
@@ -117,6 +117,10 @@
             <label for="client_tel"></label>
             <input class="form__input-text  form__input-text--tel" type="tel" name="phone"
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
+            <svg class="icon-phone" aria-label="phone">
+              <use xlink:href="#icon-phone">
+              </use>
+            </svg>
           </fieldset>
         </div>
 
@@ -125,6 +129,10 @@
             <legend class="fieldset-legend fieldset-legend--email">E-mail</legend>
             <label for="client_email"></label>
             <input class="form__input-text form__input-text--email" type="email" placeholder="Ваш Email*" form="knitting_form" id="client_email" required>
+            <svg class="icon-mail" aria-label="mail">
+              <use xlink:href="#icon-mail">
+              </use>
+            </svg>
           </fieldset>
         </div>
 
